--- a/Project_Code_1_TheJavaScriptAPIOverview.html
+++ b/Project_Code_1_TheJavaScriptAPIOverview.html
@@ -22,14 +22,20 @@
       function initMap() {
         // Constructor creates a new map - only center and zoom are required.
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 40.7413549, lng: -73.9980244},
-          zoom: 13
+          center: {lat: 34.439264, lng: -119.74544},
+          zoom: 16
+        });
+        var weStayed = {lat: 34.417246, lng: -119.699545 }
+        var marker = new google.maps.Marker({
+          position: 111W Ortega,
+          map: map,
+          title: 'Place we stayed on roadtrip!'
         });
       }
     </script>
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=MYAPIKEY&v=3&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmoEzg-cFUUTPwCYVVQeAHlQzybxpvldg&v=3&callback=initMap">
     </script>
 
   </body>
